# rust-package-manager

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: file.rs  lib.rs  main.rs  package.rs  request.rs  test.rs  user.rs
server/: Cargo.toml
server/src/: database.rs  lib.rs  main.rs  routing.rs
server/src/package/: package.rs  utils.rs
src/: database.rs  lib.rs  main.rs  package.rs  routing.rs
src/package/: package.rs  utils.rs  validation.rs
