[package]
name = "rust-package-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha3 = "0.10.8"
surrealdb = "2.0.4"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "0.6.1", features = ["cors"] }
