[package]
name = "rust-package-manager-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest =  { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha3 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
